# ROTI3DBFUWBAV

./: README.md
aruco/: aruco_output.csv  camera.yml  chessboardinfo_small_meters.yml  main.py
calibration/: calibrate.py
calibration/input/: calib_data.mat
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/uwb/: UWBMultiRange.h
catkin_ws/devel/lib/pkgconfig/: subscriber.pc  uwb.pc  uwb_dummy.pc
catkin_ws/devel/lib/subscriber/: subscriber
catkin_ws/devel/lib/uwb/: uwb_tracker_node
catkin_ws/devel/share/common-lisp/ros/uwb/msg/: UWBRange.lisp  UWBRangeStats.lisp  _package.lisp  _package_UWBRange.lisp  _package_UWBRangeStats.lisp  uwb-msg.asd
catkin_ws/devel/share/roseus/ros/uwb/: manifest.l
catkin_ws/devel/share/roseus/ros/uwb/msg/: UWBMultiRange.l  UWBMultiRangeRaw.l  UWBRange.l
catkin_ws/devel/share/subscriber/cmake/: subscriberConfig.cmake
catkin_ws/devel/share/uwb/cmake/: uwb-msg-extras.cmake  uwb-msg-paths.cmake  uwbConfig.cmake
catkin_ws/devel/share/uwb_dummy/cmake/: uwb_dummy-msg-paths.cmake  uwb_dummyConfig.cmake
catkin_ws/install/: setup.sh
catkin_ws/install/include/uwb/: UWBMultiRangeRaw.h  UWBRange.h  UWBRangeStats.h
catkin_ws/install/include/uwb_dummy/: Coordinates.h
catkin_ws/install/lib/pkgconfig/: uwb_dummy.pc
catkin_ws/install/lib/uwb_dummy/: dummy.py
catkin_ws/install/share/common-lisp/ros/uwb/msg/: UWBMultiRange.lisp  UWBMultiRangeRaw.lisp  _package_UWBMultiRange.lisp  _package_UWBMultiRangeRaw.lisp
catkin_ws/install/share/common-lisp/ros/uwb_dummy/msg/: Coordinates.lisp  _package.lisp  _package_Coordinates.lisp  uwb_dummy-msg.asd
catkin_ws/install/share/roseus/ros/uwb/msg/: UWBRangeStats.l
catkin_ws/install/share/roseus/ros/uwb_dummy/: manifest.l
catkin_ws/install/share/roseus/ros/uwb_dummy/msg/: Coordinates.l
catkin_ws/install/share/uwb/cmake/: uwb-msg-extras.cmake
catkin_ws/install/share/uwb_dummy/cmake/: uwb_dummy-msg-extras.cmake  uwb_dummy-msg-paths.cmake  uwb_dummyConfig.cmake
catkin_ws/src/fusing/: CMakeLists.txt  package.xml
catkin_ws/src/fusing/scripts/: fusing_node.py
catkin_ws/src/publish_image/: CMakeLists.txt  package.xml
catkin_ws/src/publish_image/src/: publish_image_node.cpp
catkin_ws/src/record_worldcoordinates/: CMakeLists.txt  aruco_output.hdf5  main.py  package.xml  setup.py
catkin_ws/src/record_worldcoordinates/config/: logitech.yml
catkin_ws/src/record_worldcoordinates/nodes/: record_worldcoordinates.py
catkin_ws/src/ros_aruco/: CMakeLists.txt  package.xml
catkin_ws/src/ros_aruco/src/: ros_aruco.cpp
catkin_ws/src/subscriber/: CMakeLists.txt  package.xml
catkin_ws/src/subscriber/src/: .subscriber_node.cpp.swp  subscriber_node.cpp
catkin_ws/src/uwb/config/: params_monitor.yaml
catkin_ws/src/uwb/launch/: uwb_multi_range_monitor.launch  uwb_tracker_monitor.launch
catkin_ws/src/uwb/src/: uwb_multi_range_node.py  uwb_tracker_node.py
catkin_ws/src/uwb_aruco/: CMakeLists.txt  package.xml
catkin_ws/src/uwb_aruco/src/: uwb_aruco_node.py
catkin_ws/src/uwb_dummy/: CMakeLists.txt  package.xml
catkin_ws/src/uwb_dummy/msg/: Coordinates.msg
catkin_ws/src/uwb_dummy/scripts/: .dummy.py.swp  dummy.py
catkin_ws/src/validation/: CMakeLists.txt  package.xml  validation_data.hdf5  validation_node.py
catkin_ws/src/vicon_aruco/: CMakeLists.txt  package.xml
catkin_ws/src/vicon_aruco/src/: vicon_aruco_node.py
catkin_ws/src/vision_tracker/: CMakeLists.txt  package.xml
catkin_ws/src/vision_tracker/launch/: vision_tracker.launch  vision_tracker_compressed_image.launch
catkin_ws/src/vision_tracker/src/cf_libs/common/: cf_tracker.hpp  uwb_dummy_messages.cpp
catkin_ws/src/vision_tracker/src/cf_libs/dsst/: dsst_tracker.hpp
catkin_ws/src/vision_tracker/src/cf_libs/kcf/: kcf_tracker.hpp
catkin_ws/src/vision_tracker/src/main/: image_acquisition.cpp  image_acquisition.hpp  main_kcf.hpp
catkin_ws/src/vision_tracker/src/nodes/: vision_tracker_node.cpp
catkin_ws/src/visualization/: CMakeLists.txt  package.xml  visualization_node.py
doc/: graphics.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
doc/chapters/: abstract.tex  acronyms.tex  apx-sample-appendix.tex  bibpre.tex  ch01-introduction.tex  ch02-related-work.tex  ch03-more-chapters.tex  ch03-setup.tex  ch04-fusing.tex  ch05-conclusion.tex  ch05-redetection.tex  ch05-results-discussion.tex  ch06-conclusion.tex  ch06-results-discussion.tex  ch07-conclusion.tex
doc/diagrams/: blockD.tex  blockdiagram.tex  blockdiagram_kabsch.tex  blockdiagram_recording.tex  blockdiagram_setup.tex  blockdiagram_tracking.tex  coordination_system.tex  quadBasicUWB.ai
kabsch/: 3dplot.py  Calibration.m  CalibrationVicon.m  Kabsch.m  MyKabsch.m  aruco_uwb_output_20160604_1330.hdf5  aruco_uwb_output_20160604_1333.hdf5  aruco_uwb_output_20160608_1610.hdf5  aruco_uwb_output_20160608_1620.hdf5  aruco_uwb_output_20160610_1417.hdf5  aruco_uwb_output_20160610_1420.hdf5  aruco_uwb_output_20160610_1455.hdf5  aruco_uwb_output_20160610_1500.hdf5  aruco_uwb_output_20160610_1502.hdf5  aruco_uwb_output_20160610_1623.hdf5  aruco_uwb_output_20160610_1640.hdf5  aruco_uwb_output_20160610_1736.hdf5  aruco_uwb_output_20160610_1738.hdf5  aruco_uwb_output_20160610_1739.hdf5  aruco_uwb_output_20160610_1805.hdf5  aruco_uwb_output_20160610_1806.hdf5  aruco_uwb_output_video1.hdf5  aruco_uwb_output_video10.hdf5  aruco_uwb_output_video11.hdf5  aruco_uwb_output_video2.hdf5  aruco_uwb_output_video20.hdf5  aruco_uwb_output_video3.hdf5  aruco_uwb_output_video30.hdf5  aruco_uwb_output_video4.hdf5  aruco_uwb_output_video5.hdf5  aruco_uwb_output_video6.hdf5  aruco_uwb_output_video7.hdf5  aruco_uwb_output_video8.hdf5  aruco_vicon_output30.hdf5  test.m
presentation/: presentation.tex  start_presentation
tracker/src/cf_libs/kcf/: kcf_tracker.hpp
trials/showWebCam/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SP1.cbp  cmake_install.cmake  test.cpp  test.py
validation_plot/: validation_plot.py
